hal/include/HAL/Semaphore.hpp

typedef pthread_mutex_t* MUTEX_ID;
typedef sem_t* SEMAPHORE_ID;
typedef pthread_cond_t* MULTIWAIT_ID;
	int8_t takeMutex(MUTEX_ID sem);
	int8_t giveMutex(MUTEX_ID sem);
	SEMAPHORE_ID initializeSemaphore(uint32_t initial_value);
	void deleteSemaphore(SEMAPHORE_ID sem);
	int8_t takeSemaphore(SEMAPHORE_ID sem);
	int8_t giveSemaphore(SEMAPHORE_ID sem);
	MULTIWAIT_ID initializeMultiWait();
	void deleteMultiWait(MULTIWAIT_ID sem);
	int8_t takeMultiWait(MULTIWAIT_ID sem, MUTEX_ID m, int32_t timeout);
	int8_t giveMultiWait(MULTIWAIT_ID sem);