hal/include/HAL/Notifier.hpp

	void* initializeNotifier(void (*process)(uint32_t, void*), void* param, int32_t *status);