wpilibj/wpilibJavaDevices/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

	/**
	 * Original signature : <code>int8_t takeMutex(MUTEX_ID, int32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:389</i><br>
	 * @deprecated use the safer methods {@link #takeMutex(edu.wpi.first.wpilibj.hal.HALLibrary.MUTEX_ID, int)} and {@link #takeMutex(com.sun.jna.Pointer, int)} instead
	 */
	//@Deprecated
	//public static native byte takeMutex(Pointer sem, int timeout);
	/**
	 * Original signature : <code>int8_t takeMutex(MUTEX_ID, int32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:389</i>
	 */
	public static native byte takeMutex(ByteBuffer sem, int timeout);
	/**
	 * Original signature : <code>int8_t giveMutex(MUTEX_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:391</i><br>
	 * @deprecated use the safer methods {@link #giveMutex(edu.wpi.first.wpilibj.hal.HALLibrary.MUTEX_ID)} and {@link #giveMutex(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native byte giveMutex(Pointer sem);
	/**
	 * Original signature : <code>int8_t giveMutex(MUTEX_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:391</i>
	 */
	//public static native byte giveMutex(HALLibrary.MUTEX_ID sem);
	/**
	 * Original signature : <code>SEMAPHORE_ID initializeSemaphore(uint32_t, uint32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:393</i>
	 */
	//public static native HALLibrary.SEMAPHORE_ID initializeSemaphore(int flags, int initial_value);
	/**
	 * Original signature : <code>void deleteSemaphore(SEMAPHORE_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:395</i><br>
	 * @deprecated use the safer methods {@link #deleteSemaphore(edu.wpi.first.wpilibj.hal.HALLibrary.SEMAPHORE_ID)} and {@link #deleteSemaphore(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native void deleteSemaphore(Pointer sem);
	/**
	 * Original signature : <code>void deleteSemaphore(SEMAPHORE_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:395</i>
	 */
	//public static native void deleteSemaphore(HALLibrary.SEMAPHORE_ID sem);
	/**
	 * Original signature : <code>int8_t takeSemaphore(SEMAPHORE_ID, int32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:397</i><br>
	 * @deprecated use the safer methods {@link #takeSemaphore(edu.wpi.first.wpilibj.hal.HALLibrary.SEMAPHORE_ID, int)} and {@link #takeSemaphore(com.sun.jna.Pointer, int)} instead
	 */
	//@Deprecated
	//public static native byte takeSemaphore(Pointer sem, int timeout);
	/**
	 * Original signature : <code>int8_t takeSemaphore(SEMAPHORE_ID, int32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:397</i>
	 */
	//public static native byte takeSemaphore(HALLibrary.SEMAPHORE_ID sem, int timeout);
	/**
	 * Original signature : <code>int8_t giveSemaphore(SEMAPHORE_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:399</i><br>
	 * @deprecated use the safer methods {@link #giveSemaphore(edu.wpi.first.wpilibj.hal.HALLibrary.SEMAPHORE_ID)} and {@link #giveSemaphore(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native byte giveSemaphore(Pointer sem);
	/**
	 * Original signature : <code>int8_t giveSemaphore(SEMAPHORE_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:399</i>
	 */
	//public static native byte giveSemaphore(HALLibrary.SEMAPHORE_ID sem);
	/**
	 * Original signature : <code>MULTIWAIT_ID initializeMultiWait()</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:401</i>
	 */
	//public static native HALLibrary.MULTIWAIT_ID initializeMultiWait();
	/**
	 * Original signature : <code>void deleteMultiWait(MULTIWAIT_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:403</i><br>
	 * @deprecated use the safer methods {@link #deleteMultiWait(edu.wpi.first.wpilibj.hal.HALLibrary.MULTIWAIT_ID)} and {@link #deleteMultiWait(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native void deleteMultiWait(Pointer sem);
	/**
	 * Original signature : <code>void deleteMultiWait(MULTIWAIT_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:403</i>
	 */
	//public static native void deleteMultiWait(HALLibrary.MULTIWAIT_ID sem);
	/**
	 * Original signature : <code>int8_t takeMultiWait(MULTIWAIT_ID, int32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:405</i><br>
	 * @deprecated use the safer methods {@link #takeMultiWait(edu.wpi.first.wpilibj.hal.HALLibrary.MULTIWAIT_ID, int)} and {@link #takeMultiWait(com.sun.jna.Pointer, int)} instead
	 */
	//@Deprecated
	//public static native byte takeMultiWait(Pointer sem, int timeout);
	/**
	 * Original signature : <code>int8_t takeMultiWait(MULTIWAIT_ID, int32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:405</i>
	 */
	//public static native byte takeMultiWait(HALLibrary.MULTIWAIT_ID sem, int timeout);
	/**
	 * Original signature : <code>int8_t giveMultiWait(MULTIWAIT_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:407</i><br>
	 * @deprecated use the safer methods {@link #giveMultiWait(edu.wpi.first.wpilibj.hal.HALLibrary.MULTIWAIT_ID)} and {@link #giveMultiWait(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native byte giveMultiWait(Pointer sem);
	/**
	 * Original signature : <code>int8_t giveMultiWait(MULTIWAIT_ID)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Semaphore.h:407</i>
	 */
	//public static native byte giveMultiWait(HALLibrary.MULTIWAIT_ID sem);
	/**
	 * Original signature : <code>TASK spawnTask(char*, int, int, int, FUNCPTR, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:420</i><br>
	 * @deprecated use the safer methods {@link #spawnTask(java.nio.ByteBuffer, int, int, int, edu.wpi.first.wpilibj.hal.HALLibrary.FUNCPTR, int, int, int, int, int, int, int, int, int, int)} and {@link #spawnTask(com.sun.jna.Pointer, int, int, int, edu.wpi.first.wpilibj.hal.HALLibrary.FUNCPTR, int, int, int, int, int, int, int, int, int, int)} instead
	 */
	//@Deprecated
	//public static native HALLibrary.TASK spawnTask(Pointer name, int priority, int options, int stackSize, HALLibrary.FUNCPTR entryPt, int arg0, int arg1, int arg2, int arg3, int arg4, int arg5, int arg6, int arg7, int arg8, int arg9);
	/**
	 * Original signature : <code>TASK spawnTask(char*, int, int, int, FUNCPTR, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t, uint32_t)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:420</i>
	 */
	//public static native HALLibrary.TASK spawnTask(ByteBuffer name, int priority, int options, int stackSize, HALLibrary.FUNCPTR entryPt, int arg0, int arg1, int arg2, int arg3, int arg4, int arg5, int arg6, int arg7, int arg8, int arg9);
	/**
	 * Original signature : <code>STATUS restartTask(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:422</i><br>
	 * @deprecated use the safer methods {@link #restartTask(edu.wpi.first.wpilibj.hal.HALLibrary.TASK)} and {@link #restartTask(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native int restartTask(Pointer task);
	/**
	 * Original signature : <code>STATUS restartTask(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:422</i>
	 */
	//public static native int restartTask(HALLibrary.TASK task);
	/**
	 * Original signature : <code>STATUS deleteTask(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:424</i><br>
	 * @deprecated use the safer methods {@link #deleteTask(edu.wpi.first.wpilibj.hal.HALLibrary.TASK)} and {@link #deleteTask(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native int deleteTask(Pointer task);
	/**
	 * Original signature : <code>STATUS deleteTask(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:424</i>
	 */
	//public static native int deleteTask(HALLibrary.TASK task);
	/**
	 * Original signature : <code>STATUS isTaskReady(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:426</i><br>
	 * @deprecated use the safer methods {@link #isTaskReady(edu.wpi.first.wpilibj.hal.HALLibrary.TASK)} and {@link #isTaskReady(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native int isTaskReady(Pointer task);
	/**
	 * Original signature : <code>STATUS isTaskReady(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:426</i>
	 */
	//public static native int isTaskReady(HALLibrary.TASK task);
	/**
	 * Original signature : <code>STATUS isTaskSuspended(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:428</i><br>
	 * @deprecated use the safer methods {@link #isTaskSuspended(edu.wpi.first.wpilibj.hal.HALLibrary.TASK)} and {@link #isTaskSuspended(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native int isTaskSuspended(Pointer task);
	/**
	 * Original signature : <code>STATUS isTaskSuspended(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:428</i>
	 */
	//public static native int isTaskSuspended(HALLibrary.TASK task);
	/**
	 * Original signature : <code>STATUS suspendTask(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:430</i><br>
	 * @deprecated use the safer methods {@link #suspendTask(edu.wpi.first.wpilibj.hal.HALLibrary.TASK)} and {@link #suspendTask(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native int suspendTask(Pointer task);
	/**
	 * Original signature : <code>STATUS suspendTask(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:430</i>
	 */
	//public static native int suspendTask(HALLibrary.TASK task);
	/**
	 * Original signature : <code>STATUS resumeTask(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:432</i><br>
	 * @deprecated use the safer methods {@link #resumeTask(edu.wpi.first.wpilibj.hal.HALLibrary.TASK)} and {@link #resumeTask(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native int resumeTask(Pointer task);
	/**
	 * Original signature : <code>STATUS resumeTask(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:432</i>
	 */
	//public static native int resumeTask(HALLibrary.TASK task);
	/**
	 * Original signature : <code>STATUS verifyTaskID(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:434</i><br>
	 * @deprecated use the safer methods {@link #verifyTaskID(edu.wpi.first.wpilibj.hal.HALLibrary.TASK)} and {@link #verifyTaskID(com.sun.jna.Pointer)} instead
	 */
	//@Deprecated
	//public static native int verifyTaskID(Pointer task);
	/**
	 * Original signature : <code>STATUS verifyTaskID(TASK)</code><br>
	 * <i>native declaration : AthenaJava\target\native\include\HAL\Task.h:434</i>
	 */
	//public static native int verifyTaskID(HALLibrary.TASK task);
